--- a/ansible/roles/backup/defaults/main.yml
+++ b/ansible/roles/backup/defaults/main.yml
@@ -1,11 +1,8 @@
 ---
 # defaults file for backups3
-local_backup_dir: /backupdospace
-env: demo
-bucket_name: 'litecoindata'
-paths_to_backup:
-  path1:
-    path: /var/log/litecoin
-    tag: ltcdata
-aws_access_key: ''
-aws_secret_key: ''
+aws_access_key: QW4KPWIIVJTWNF65MZUF
+aws_secret_key: LgXw35eFLVr+rjuhnLQfc9hRYGG4vCHn8LVrBoJp93A
+region: sfo3
+s3_url: "https://sfo3.digitaloceanspaces.com"
+restore: true
+litecoin__service: litecoin
